src/styles/blocks/page.scss
.page {
  background-color: $c-dimmed-white;
  scroll-behavior: smooth;

  &__body {
    margin: 0;
    overflow-x: hidden;

    &--menu-on {
      overflow: hidden;
    }
  }

  &__menu {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;

    transform: translateY(-100%);
    @include transitions(transform);

    &:target {
      z-index: 1;
      transform: translateY(0);
    }
  }
}

